map full transparent solid fill to no fill, fdo#64224

(cherry picked from commit 6e2292b3cdd032edff21f0016b7f61e9bb420699)

Change-Id: I9ec33b347647bfcd6c1411c4db7af51ca597dc8e
Signed-off-by: Miklos Vajna <vmiklos@suse.cz>